--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "layouts.c": "c",
-        "functional": "c"
+        "functional": "c",
+        "exception": "c",
+        "stack": "c",
+        "variant": "c"
     }
 }
