pavucontrol by super shift clicking on statustext

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "exception": "c",
         "stack": "c",
         "variant": "c",
-        "stdarg.h": "c"
+        "stdarg.h": "c",
+        "push.c": "c"
     }
 }
