add manual font sizing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "vector": "c",
         "valarray": "c",
         "typeinfo": "cpp",
-        "*.rh": "cpp"
+        "*.rh": "cpp",
+        "memory_resource": "cpp"
     }
 }
