fix non-animated minimizing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "valarray": "c",
         "typeinfo": "cpp",
         "*.rh": "cpp",
-        "memory_resource": "cpp"
+        "memory_resource": "cpp",
+        "*.inc": "c"
     }
 }
