make overview support floating windows

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "typeinfo": "cpp",
         "*.rh": "cpp",
         "memory_resource": "cpp",
-        "*.inc": "c"
+        "*.inc": "c",
+        "iterator": "c"
     }
 }
